--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 *.sqlite3
 .idea
 img/avatars/
+img
+*/__pycache__
+/*/__pycache__
+party/migrations/__pycache__
+player/migrations/__pycache__
+player/templatetags/__pycache__
+region/migrations/__pycache__
+region/views/__pycache__
