Вступление и выход из партии (no js)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ player/migrations/__pycache__
 player/templatetags/__pycache__
 region/migrations/__pycache__
 region/views/__pycache__
+party/views/__pycache__
+party/templatetags/party_blocks/__pycache__
+party/templatetags/__pycache__
+party/logs/__pycache__
+party/primaries/__pycache__
+party/views/management/__pycache__
+party/views/management/staff/__pycache__
+player/logs/__pycache__
+state/migrations/__pycache__
+state/parliament/__pycache__
