--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ party/views/management/staff/__pycache__
 player/logs/__pycache__
 state/migrations/__pycache__
 state/parliament/__pycache__
+party/urls/__pycache__
+party/views/management/roles/__pycache__
