Страница Склада и Активов

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ state/migrations/__pycache__
 state/parliament/__pycache__
 party/urls/__pycache__
 party/views/management/roles/__pycache__
+storage/templatetags/__pycache__
+storage/templatetags/storage_blocks/__pycache__
+storage/urls/__pycache__
+storage/views/__pycache__
