Создание нового склада

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ storage/templatetags/__pycache__
 storage/templatetags/storage_blocks/__pycache__
 storage/urls/__pycache__
 storage/views/__pycache__
+storage/migrations/__pycache__
+static
+player/views/__pycache__
