Изменение правил игнорирования файлов

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.sqlite3
 .idea
 img/avatars/
-img
+
 */__pycache__
 /*/__pycache__
 party/migrations/__pycache__
@@ -27,6 +27,7 @@ storage/templatetags/storage_blocks/__pycache__
 storage/urls/__pycache__
 storage/views/__pycache__
 storage/migrations/__pycache__
-static
 player/views/__pycache__
 storage/models/__pycache__
+/static
+/img
