Передача денег со Склада / на Склад

--- a/.gitignore
+++ b/.gitignore
@@ -3,31 +3,6 @@
 .idea
 img/avatars/
 
-*/__pycache__
-/*/__pycache__
-party/migrations/__pycache__
-player/migrations/__pycache__
-player/templatetags/__pycache__
-region/migrations/__pycache__
-region/views/__pycache__
-party/views/__pycache__
-party/templatetags/party_blocks/__pycache__
-party/templatetags/__pycache__
-party/logs/__pycache__
-party/primaries/__pycache__
-party/views/management/__pycache__
-party/views/management/staff/__pycache__
-player/logs/__pycache__
-state/migrations/__pycache__
-state/parliament/__pycache__
-party/urls/__pycache__
-party/views/management/roles/__pycache__
-storage/templatetags/__pycache__
-storage/templatetags/storage_blocks/__pycache__
-storage/urls/__pycache__
-storage/views/__pycache__
-storage/migrations/__pycache__
-player/views/__pycache__
-storage/models/__pycache__
 /static
 /img
+__pycache__
