Полностью доделаны таски праймериз + фикс миграций

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ kombu==4.6.11
 msgpack==1.0.2
 Pillow==8.0.1
 prompt-toolkit==3.0.3
-psycopg2-binary==2.8.6
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
