--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ server {
     }
 
     location / {
+        client_max_body_size 0;
         proxy_set_header Host  $host;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
