--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   db:
     image: postgres:13-alpine
+    command: postgres -c 'max_connections=500'
     restart: always
     ports:
       - 6543:5432
