правки конфига nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,26 @@
+limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=10r/s;
+
 server {
-    listen 80;
+	listen 80;
+	root /data;
+	client_max_body_size 10m;
 
-    root /data;
-    client_max_body_size 10m;
+	location /static/ {
+		try_files $uri =404;
+	}
 
-    location /static/ {
-        try_files $uri =404;
-    }
+	location /media/ {
+		try_files $uri =404;
+	}
 
-    location /media/ {
-        try_files $uri =404;
-    }
+	location / {
+		limit_req zone=req_limit_per_ip burst=20;
 
-    location / {
-        client_max_body_size 0;
-        proxy_set_header Host  $host;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass http://wildpolitics;
-    }
+		client_max_body_size 0;
+		proxy_set_header Host  $host;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "Upgrade";
+		proxy_pass http://wildpolitics;
+	}
 }
