--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ geo_json/реги/выгруженное
 geo_json/реги/необработанное
 translations.sh
 var
+path/to/wp.sql
+path/to/pgadmin4-7.8-py3-none-any.whl
+pgadmin4-7.8-py3-none-any.whl
+wp.sql
